feat: production readiness hardening — security, observability, and ops
Security:
- Add startup validation rejecting insecure default secrets in non-dev profiles
- Add rate limiting filter for auth/webhook endpoints (IP-based token bucket)
- Add worker authentication via X-Worker-Token (HMAC-derived from JWT secret)
- Fix CORS to use explicit allowed headers instead of wildcard
- Make CORS origins configurable via GIMI_SERVER_CORS_ALLOWED_ORIGINS
- Fix webhook to use constant-time secret comparison (prevent timing attacks)
- Add double-check guard against first-user registration race condition
- Mask secrets in shell executor logs (log template, not resolved command)
- Secure Prometheus endpoint behind ADMIN/OPERATOR role
- Fix JwtTokenProvider to use correct config property path
- Add input validation and bounds checking to AuditController

Observability:
- Add CorrelationIdFilter for distributed request tracing via X-Correlation-Id
- Add logback-spring.xml with dev (human-readable) and prod (JSON) profiles
- Enable Kubernetes liveness/readiness health probes in actuator config

Testing:
- Add JaCoCo coverage plugin (activated via -Pcoverage profile)
- Add PostgresExecutionStore integration test with TestContainers
- Fix controller tests to mock new security filter beans
- CI pipeline now uploads JaCoCo coverage reports

Ops:
- Add Kubernetes manifests (Deployment, Service, HPA, Ingress, Kustomize)
- Add K8s secrets and configmap templates with placeholder values
- Add Docker container resource limits and JVM tuning (G1GC, MaxRAMPercentage)
- Add Docker image build step to CI pipeline (server + worker)
- Externalize secrets in docker-compose via environment variable substitution
- Add dev profile to docker-compose for local development

https://claude.ai/code/session_01K98qBBaEKpV1tqeTZ3qPj9